Initial changes from Loquacious' template

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Blog</title>
+		<title>Le explorateur de la culture</title>
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic&subset=latin,vietnamese">
 		<link rel="stylesheet" type="text/css" href="stylesheets/normalize/normalize.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
@@ -14,8 +14,8 @@
 	<body>
 		<div id="showabout" class="showabout-hover showabout-active" title="Click to show about"></div>
 		<div id="about" class="about"><img src="images/x.svg" alt="X" title="Click to hide about">
-			<h1>About Me</h1>
-			<p>My name is <a href="https://github.com/Loquacious/">Ryan Nguyen</a> and I designed all of this blog. Frankly, I'm not a very good designer.</p>
+			<h1>Au propos de moi</h1>
+			<p>Mon nom est Damanjit et c'est mon blog.</p>
 		</div>
 		<div id="share">
 			<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//loquacious.github.io/blog/" target="_blank" title="Share on Facebook"><img src="images/facebook.png" alt="Facebook F"></a>
