--- a/index.html
+++ b/index.html
@@ -15,33 +15,24 @@
 		<div id="showabout" class="showabout-hover showabout-active" title="Click to show about"></div>
 		<div id="about" class="about"><img src="images/x.svg" alt="X" title="Click to hide about">
 			<h1>Au propos de moi</h1>
-			<p>Mon nom est Damanjit et c'est mon blog.</p>
+			<p>
+				Mon nom est Damanjit et c'est mon blog. Dans ce blog, je poste de mon experiences alors que je vais au nouveau pays.
+			</p>
 		</div>
 		<div id="share">
 			<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//loquacious.github.io/blog/" target="_blank" title="Share on Facebook"><img src="images/facebook.png" alt="Facebook F"></a>
 			<a href="https://twitter.com/home?status=https%3A//loquacious.github.io/blog/" target="_blank" title="Share on Twitter"><img src="images/twitter.png" alt="Twitter Bird"></a>
 		</div>
 		<div id="main">
-			<h1>Blog</h1>
-			<p>As the name would states, a blog. Well, not exactly; this is actually a theme that you can use for a blog.</p>
-			<hr>
-			<h2>Usage</h2>
-			<p><a href="https://github.com/Loquacious/blog/">Download the theme</a> and substitute the text to match your project's. What to change is rather self-explanatory if you read the HTML.</p>
-			<h2>Basic Features</h2>
-			<p>Here's a paragraph:</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<h3>Third-level Header</h3>
-			<h4>Fourth-level Header</h4>
-			<h5>Fifth-level Header</h5>
-			<h6>Sixth-level Header</h6>
-			<p>This is some inline code: <code>document.write('foo bar');</code></p>
-			<p>Here is some block code: <pre><code>var a = 0;
-var b = 3;
-document.write(a * b);</code></pre></p>
-			<p>Here is some overflowing block code (it's scrollable!): <pre><code>document.write('This is a very long sentence that would normally not fit on a single line of text and to combat that, this code block is now scrollable. Have fun with it.');</code></pre></p>
-			<p>Here is an overflowing word that should have hyphens (but hyphens aren't supported in all browsers): Lopado­temacho­selacho­galeo­kranio­leipsano­drim­hypo­trimmato­silphio­parao­melito­katakechy­meno­kichl­epi­kossypho­phatto­perister­alektryon­opte­kephallio­kigklo­peleio­lagoio­siraio­baphe­tragano­pterygon</p>
-			<p>It also has those cool share icons for Facebook and Twitter.</p>
-			<p>If you're on a computer, try resizing the window to see what'll happen. This responsive design is in no way perfected but it's a start.</p>
+			<h1>Le explorateur de la culture</h1>
+			<p>
+				Je suis damanjit et j'adors culture francais!!
+			</p>
+			<hr />
+			<h2>Luxembourg!</h2>
+			<p>
+				Bonjour mes amis! Aujourd'hui j'ai quelques bon nouvelle. Je vais a Luxembourg! Je suis tres enthousiaste parce que Luxembourg est beaucoup de culture francais. A bientot!
+			</p>
 		</div>
 	</body>
 </html>
