--- a/index.html
+++ b/index.html
@@ -33,6 +33,38 @@
 			<p>
 				Bonjour mes amis! Aujourd'hui j'ai quelques bon nouvelle. Je vais a Luxembourg! Je suis tres enthousiaste parce que Luxembourg est beaucoup de culture francais. A bientot!
 			</p>
+			<hr />
+			<h2> Je suis arrive a Luxembourg!</h2>
+			<p>
+				Bonjour mes amis! Je suis en luxembourg!
+			</p>
+			<hr />
+			<h2>Le Cuisine de Luxembourg</h2>
+			<p>
+				Bonjour mes amis! Hier, quand j'explore Luxembourg, je trouve les tres bon nourriture de Luxembourg, comme:
+				<ul>
+					<li>
+						Verwurrelt Gedanken - Les patês saupoudrer avec le sucre
+					</li>
+					<li>
+						Nonnefäscht - Les beignets saupoudrer avec le sucre
+					</li>
+					<li>
+						Täertelcher - Les special beginets
+					</li>
+					<li>
+						Maiserche - Les beignets en forme de un fourmi
+					</li>
+					<li>
+						Stretzegebäck - Les petites gateaux
+					</li>
+				</ul>
+				Mmm! Tres delicieux! Aprés je gout les nourriture, je pense que mon favorite est les Täertelcher. J'aime le gout de Täertelcher, et je veut donner a toi un recette!
+				<h3>Recette pour Täertelcher</h3>
+				<ul>
+					
+				</ul>
+			</p>
 		</div>
 	</body>
 </html>
