--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<hr />
 			<h2> Je suis arrive a Luxembourg!</h2>
 			<p>
-				Bonjour mes amis! Je suis en luxembourg!
+				Bonjour mes amis! Je suis en luxembourg! C'est tres belle ici. 
 			</p>
 			<hr />
 			<h2>Le Cuisine de Luxembourg</h2>
@@ -62,7 +62,7 @@
 				Mmm! Tres delicieux! Aprés je gout les nourriture, je pense que mon favorite est les Täertelcher. J'aime le gout de Täertelcher, et je veut donner a toi un recette!
 				<h3>Recette pour Täertelcher</h3>
 				<ul>
-					
+
 				</ul>
 			</p>
 		</div>
