--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<hr />
 			<h2> Je suis arrive a Luxembourg!</h2>
 			<p>
-				Bonjour mes amis! Je suis en luxembourg! C'est tres belle ici. 
+				Bonjour mes amis! Je suis en luxembourg! C'est tres belle ici.
 			</p>
 			<hr />
 			<h2>Le Cuisine de Luxembourg</h2>
@@ -61,9 +61,63 @@
 				</ul>
 				Mmm! Tres delicieux! Aprés je gout les nourriture, je pense que mon favorite est les Täertelcher. J'aime le gout de Täertelcher, et je veut donner a toi un recette!
 				<h3>Recette pour Täertelcher</h3>
+				<h5>Ingrédients</h5>
 				<ul>
-
+					<li>
+						Deux 1/2 cuillére à soupe de levure séche
+					</li>
+					<li>
+						Un 1/2 tasses chaud eau
+					</li>
+					<li>
+						1/2 tasse sucre blanc
+					</li>
+					<li>
+						1/2 cuillére à soupe de sel
+					</li>
+					<li>
+						Deux oeuf
+					</li>
+					<li>
+						Un tasse de lait évaporé
+					</li>
+					<li>
+						Sept tasses de farine
+					</li>
+					<li>
+						1/4 tasse de matière grasse
+					</li>
+					<li>
+						Un quart de huile legumes
+					</li>
+					<li>
+						1/4 tasse sucre brun
+					</li>
 				</ul>
+			</p>
+			<hr />
+			<p>
+				<h4>Le Recette</h4>
+				<ol>
+					<li>
+						Dans un grande bol, dissoudre le levure dans l'eau chaude. Met la sucre, le sel, les oeufs, et le lait évaporé dans le bol et mélange.
+					</li>
+					<li>
+						Met la matière grasse, et aprés ca met le farine. Protéger ca et met ca dns un place froide.
+					</li>
+					<li>
+						Roule la pâte 1/8 pouse épais. Couper ca dans deux et 1/2 pouse carrés.
+					</li>
+					<li>
+						Faire frier dans un four 360 degré chaud.
+					</li>
+					<li>
+						Met le sucre brun sur les täertelcher.
+					</li>
+					<li>
+						Tu et fini!
+					</li>
+				</ol>
 			</p>
 		</div>
 	</body>
