--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 					</li>
 				</ul>
 				Mmm! Tres delicieux! Aprés je gout les nourriture, je pense que mon favorite est les Täertelcher. J'aime le gout de Täertelcher, et je veut donner a toi un recette!
-				<h3>Recette pour Täertelcher</h3>
+				<img src="http://prodstatics3azcdn1.purewow.com/images/articles/2015_02/purewow_beignets_1.png" alt="Täertelcher/Beignets" style="width:647px;height:359px;" />
+				<h3>Recette pour Täertelcher AKA Beignets</h3>
 				<h5>Ingrédients</h5>
 				<ul>
 					<li>
