--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
 						Tu et fini!
 					</li>
 				</ol>
+				Maintenant, tu peut mange les beignets! Le gout est tres bien, mm!
 			</p>
+			<hr />
 		</div>
 	</body>
 </html>
