--- a/index.html
+++ b/index.html
@@ -122,11 +122,15 @@
 				Maintenant, tu peut mange les beignets! Le gout est tres bien, mm!
 			</p>
 			<hr />
+			<p>
+				Les Sources: http://luxemblog.blogspot.ca/2011/02/powdered-sugar-overload.html allrecipes.com/recipe/7179/beignets/
+
+			</p>
 		<h2>Le Celebrations de Luxembourg</h2>
 		<p>
-			Bonjour mes amis! Aujourd'hui j'ai visite un celebration dans luxembourg. C'est..
-			<h3>Pétange</h3>
-			Petange, AKA KaGePe, est un importante festival dans Luxembourg. KaGePe commence dans 1944, quand les soldiers americains libre Luxembourg de Germany. Pétange s'axer sur est sur les spectacles de marionnettes est des des pièces de theatre.
+			Bonjour mes amis! Aujourd'hui j'ai visite un celebration à luxembourg. C'est..
+			<h3>Dräikinneksdag</h3>
+			Dräikinneksdag est un celebration à Luxembourg. Cette celebration est traduit à "Day of the Three Kings" en anglais, ou "Joue de les Trois Rois" en français. Cette celebration est creé quand pour célébrer la arrivée de les Trois Hommes Sage, pour regarder Enfant Jésus.
 		</p>
 		</div>
 	</body>
