--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 		<p>
 			Bonjour mes amis! Aujourd'hui j'ai visite un celebration à luxembourg. C'est..
 			<h3>Dräikinneksdag</h3>
+			<img src="http://www.alfabrasserie.lu/img/blog/93-draikinneksdag.jpg" alt="Day of the Three Kings" style="width:800px;height:578px;" />
 			Dräikinneksdag est un celebration à Luxembourg. Cette celebration est traduit à "Day of the Three Kings" en anglais, ou "Joue de les Trois Rois" en français. Cette celebration est creé quand pour célébrer la arrivée de les Trois Hommes Sage, pour regarder Enfant Jésus.
 		</p>
 		</div>
