--- a/index.html
+++ b/index.html
@@ -126,12 +126,21 @@
 				Les Sources: http://luxemblog.blogspot.ca/2011/02/powdered-sugar-overload.html allrecipes.com/recipe/7179/beignets/
 
 			</p>
+			<hr />
 		<h2>Le Celebrations de Luxembourg</h2>
 		<p>
 			Bonjour mes amis! Aujourd'hui j'ai visite un celebration à luxembourg. C'est..
 			<h3>Dräikinneksdag</h3>
 			<img src="http://www.alfabrasserie.lu/img/blog/93-draikinneksdag.jpg" alt="Day of the Three Kings" style="width:800px;height:578px;" />
-			Dräikinneksdag est un celebration à Luxembourg. Cette celebration est traduit à "Day of the Three Kings" en anglais, ou "Joue de les Trois Rois" en français. Cette celebration est creé quand pour célébrer la arrivée de les Trois Hommes Sage, pour regarder Enfant Jésus.
+			Dräikinneksdag est un celebration à Luxembourg. Cette celebration est traduit à "Day of the Three Kings" en anglais,
+			ou "Joue de les Trois Rois" en français. Cette celebration est creé quand pour célébrer la arrivée de les Trois Hommes
+			Sage, pour regarder Enfant Jésus. Dräikinneksdag est sur 6 Janvier. Tu peut traduit Dräikinneksdag à "Epiphany" en anglais,
+			ou "Fulguration" en français. Sur Dräikinneksdag, ils à un "Festin du Fulguration". Pendant le Festin de Fulguration, ils
+			mangent les tartes
+		</p>
+		<hr />
+		<p>
+			Les Sources: http://www.luxembourg.public.lu/en/le-grand-duche-se-presente/fetes-traditions/draikinneksdag/index.html
 		</p>
 		</div>
 	</body>
