--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
 			ou "Joue de les Trois Rois" en français. Cette celebration est creé quand pour célébrer la arrivée de les Trois Hommes
 			Sage, pour regarder Enfant Jésus. Dräikinneksdag est sur 6 Janvier. Tu peut traduit Dräikinneksdag à "Epiphany" en anglais,
 			ou "Fulguration" en français. Sur Dräikinneksdag, ils à un "Festin du Fulguration". Pendant le Festin de Fulguration, ils
-			mangent les tartes
+			mangent les tartes (comme le tarte au-dessus de ceci) et un personne peut trouver un petite couronne dans son ou sa tarte.
+			Si se passer, le fille/garcno qui trouve le couronne devenir le roi/reine pour la jour. Aujourd'hui, j'ai le roi et c'est
+			beaucoup de amusement!
 		</p>
 		<hr />
 		<p>
