--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				Bonjour mes amis! Je suis en luxembourg! C'est tres belle ici.
 			</p>
 			<hr />
+			<!--CUISINE-->
 			<h2>Le Cuisine de Luxembourg</h2>
 			<p>
 				Bonjour mes amis! Hier, quand j'explore Luxembourg, je trouve les tres bon nourriture de Luxembourg, comme:
@@ -127,6 +128,7 @@
 
 			</p>
 			<hr />
+			<!--CELEBRATIONS-->
 		<h2>Le Celebrations de Luxembourg</h2>
 		<p>
 			Bonjour mes amis! Aujourd'hui j'ai visite un celebration à luxembourg. C'est..
@@ -137,12 +139,35 @@
 			Sage, pour regarder Enfant Jésus. Dräikinneksdag est sur 6 Janvier. Tu peut traduit Dräikinneksdag à "Epiphany" en anglais,
 			ou "Fulguration" en français. Sur Dräikinneksdag, ils à un "Festin du Fulguration". Pendant le Festin de Fulguration, ils
 			mangent les tartes (comme le tarte au-dessus de ceci) et un personne peut trouver un petite couronne dans son ou sa tarte.
-			Si se passer, le fille/garcno qui trouve le couronne devenir le roi/reine pour la jour. Aujourd'hui, j'ai le roi et c'est
+			Si se passer, le fille/garcon qui trouve le couronne devenir le roi/reine pour la jour. Aujourd'hui, j'ai le roi et c'est
 			beaucoup de amusement!
 		</p>
 		<hr />
 		<p>
 			Les Sources: http://www.luxembourg.public.lu/en/le-grand-duche-se-presente/fetes-traditions/draikinneksdag/index.html
+		</p>
+		<hr />
+		<!--HISTORY-->
+		<h2>L'histoire de Luxembourg</h2>
+		<img src="http://www.everyculture.com/images/ctc_03_img0648.jpg" alt="Luxembourg" style="width:483px;height:287px;" />
+		<p>
+			Bonjour mes amis! Aujourd'hui, je visite un musée et j'apprends beaucoup de l'histoire de Luxembourg. Je veut partager ca avec toi!
+		</p>
+		<p>
+			Le histoire de luxembourg est tres interessant.
+		</p>
+		<p>
+			Les Sources:
+		</p>
+		<hr />
+		<!--MAP-->
+		<h2>Le Carte de Luxembourg</h2>
+		<img src="http://belladia.typepad.com/.a/6a00d8341cc08553ef01310f51e450970c-pi" alt="Luxembourg sur la Carte" style="width:800px;height:544px;" />
+		<p>
+			Bonjour mes amis! Aujourd'hui j'ai ne pas les chauses qui je peut faire, tellement j'apprends de Luxembourg sur la Carte de terre.
+		</p>
+		<p>
+			Les Sources: http://www.worldatlas.com/webimage/countrys/europe/lu.htm
 		</p>
 		</div>
 	</body>
