--- a/index.html
+++ b/index.html
@@ -124,7 +124,16 @@
 			</p>
 			<hr />
 			<p>
-				Les Sources: http://luxemblog.blogspot.ca/2011/02/powdered-sugar-overload.html allrecipes.com/recipe/7179/beignets/
+				Les Sources:
+				<ul>
+					<li>
+						 http://luxemblog.blogspot.ca/2011/02/powdered-sugar-overload.html
+					</li>
+					<li>
+						 allrecipes.com/recipe/7179/beignets/
+					</li>
+				</ul>
+
 
 			</p>
 			<hr />
@@ -144,7 +153,12 @@
 		</p>
 		<hr />
 		<p>
-			Les Sources: http://www.luxembourg.public.lu/en/le-grand-duche-se-presente/fetes-traditions/draikinneksdag/index.html
+			Les Sources:
+			<ul>
+				<li>
+					http://www.luxembourg.public.lu/en/le-grand-duche-se-presente/fetes-traditions/draikinneksdag/index.html
+				</li>
+			</ul>
 		</p>
 		<hr />
 		<!--HISTORY-->
@@ -158,6 +172,11 @@
 		</p>
 		<p>
 			Les Sources:
+			<ul>
+				<li>
+
+				</li>
+			</ul>
 		</p>
 		<hr />
 		<!--MAP-->
@@ -167,7 +186,10 @@
 			Bonjour mes amis! Aujourd'hui j'ai ne pas les chauses qui je peut faire, tellement j'apprends de Luxembourg sur la Carte de terre.
 		</p>
 		<p>
-			Les Sources: http://www.worldatlas.com/webimage/countrys/europe/lu.htm
+			Les Sources:
+			<ul>
+				http://www.worldatlas.com/webimage/countrys/europe/lu.htm
+			</ul>
 		</p>
 		</div>
 	</body>
