--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			Bonjour mes amis! Aujourd'hui j'ai ne pas les chauses qui je peut faire, tellement j'apprends de Luxembourg sur la Carte de terre.
 		</p>
 		<p>
-			Luxembourg est situé sur le frontiére entre France, Allemagne, et Belqique. Parce que ca, le culture du Luxembourg est un combinaison de ces trois pays, avec le culture du Luxembourg soi-même. C'est tres interessant! Le capital du Luxembourg est Luxembourg Ville. Luxembourg Ville est à le sud du Luxembourg. Ce ville est le plus de personnes dans Luxembourg, avec à peu près 100,000. La population est trois fois plus que le deuxieme plus grand ville, Esch-sur-Alzette. 
+			Luxembourg est situé sur le frontiére entre France, Allemagne, et Belqique. Parce que ca, le culture du Luxembourg est un combinaison de ces trois pays, avec le culture du Luxembourg soi-même. Aussi, Luxembourg est un trés petite paus. C'est tres interessant! Le capital du Luxembourg est Luxembourg Ville. Luxembourg Ville est à le sud du Luxembourg. Ce ville est le plus de personnes dans Luxembourg, avec à peu près 100,000. La population est trois fois plus que le deuxieme plus grand ville, Esch-sur-Alzette. 
 		</p>
 		<p>
 			Les Sources:
