--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 			</p>
 			<hr />
 			<!--CUISINE-->
-			<h2>Le Cuisine de Luxembourg</h2>
+			<h2>Le Cuisine du Luxembourg</h2>
 			<p>
-				Bonjour mes amis! Hier, quand j'explore Luxembourg, je trouve les tres bon nourriture de Luxembourg, comme:
+				Bonjour mes amis! Hier, quand j'explore Luxembourg, je trouve les tres bon nourriture , comme:
 				<ul>
 					<li>
 						Verwurrelt Gedanken - Les patês saupoudrer avec le sucre
@@ -138,7 +138,7 @@
 			</p>
 			<hr />
 			<!--CELEBRATIONS-->
-		<h2>Le Celebrations de Luxembourg</h2>
+		<h2>Le Celebrations du luxembourg</h2>
 		<p>
 			Bonjour mes amis! Aujourd'hui j'ai visite un celebration à luxembourg. C'est..
 			<h3>Dräikinneksdag</h3>
@@ -162,13 +162,13 @@
 		</p>
 		<hr />
 		<!--HISTORY-->
-		<h2>L'histoire de Luxembourg</h2>
+		<h2>L'histoire du luxembourg</h2>
 		<img src="http://www.everyculture.com/images/ctc_03_img0648.jpg" alt="Luxembourg" style="width:483px;height:287px;" />
 		<p>
-			Bonjour mes amis! Aujourd'hui, je visite un musée et j'apprends beaucoup de l'histoire de Luxembourg. Je veut partager ca avec toi!
+			Bonjour mes amis! Aujourd'hui, je visite un musée et j'apprends beaucoup de l'histoire du luxembourg. Je veut partager ca avec toi!
 		</p>
 		<p>
-			Le histoire de luxembourg est tres interessant.
+			Le histoire du luxembourg est tres interessant.
 		</p>
 		<p>
 			Les Sources:
@@ -180,20 +180,51 @@
 		</p>
 		<hr />
 		<!--MAP-->
-		<h2>Le Carte de Luxembourg</h2>
+		<h2>Le Carte du luxembourg</h2>
 		<img src="http://belladia.typepad.com/.a/6a00d8341cc08553ef01310f51e450970c-pi" alt="Luxembourg sur la Carte" style="width:800px;height:544px;" />
 		<p>
-			Bonjour mes amis! Aujourd'hui j'ai ne pas les chauses qui je peut faire, tellement j'apprends de Luxembourg sur la Carte de terre.
+			Bonjour mes amis! Aujourd'hui j'ai ne pas les chauses qui je peut faire, tellement j'apprends du luxembourg sur la Carte de terre.
 		</p>
 		<p>
-			Luxembourg est situé sur le frontiére entre France, Allemagne, et Belqique. Parce que ca, le culture du Luxembourg est un combinaison de ces trois pays, avec le culture du Luxembourg soi-même. Aussi, Luxembourg est un trés petite paus. C'est tres interessant! Le capital du Luxembourg est Luxembourg Ville. Luxembourg Ville est à le sud du Luxembourg. Ce ville est le plus de personnes dans Luxembourg, avec à peu près 100,000. La population est trois fois plus que le deuxieme plus grand ville, Esch-sur-Alzette. 
+			Luxembourg est situé sur le frontiére entre France, Allemagne, et Belqique. Parce que ca, le culture du Luxembourg est un combinaison de ces trois pays, avec le culture du Luxembourg soi-même. Aussi, Luxembourg est un trés petite paus. C'est tres interessant! Le capital du Luxembourg est Luxembourg Ville. Luxembourg Ville est à le sud du Luxembourg. Ce ville est le plus de personnes dans Luxembourg, avec à peu près 100,000. La population est trois fois plus que le deuxieme plus grand ville, Esch-sur-Alzette.
+		</p>
+		<p>
+			<hr />
+			Les Sources:
+			<ul>
+				<li>
+				http://www.worldatlas.com/webimage/countrys/europe/lu.htm
+				</li>
+				<li>
+					https://en.wikipedia.org/wiki/Luxembourg_City
+				</li>
+				<li>
+					https://en.wikipedia.org/wiki/Luxembourg
+				</li>
+			</ul>
+
+		</p>
+		<hr />
+		<!--FLAG-->
+		<h2>Le Drapeau du Luxembourg</h2>
+		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Flag_of_Luxembourg.svg/2000px-Flag_of_Luxembourg.svg.png" alt="Le Drapeau du Luxembourg" style="width:2000px;height:1200px;"  />
+		<p>
+			Bonjour mes amis! Aujourd'hui je ragarde un Drapeau de Luxembourg. C'est tres belle, est je veut donne toi un petit peut de informations!
+		</p>
+		<p>
+			Les colours de le drapeau est Rouge, Clair Bleu, et Blanc. Ces colours origine par la treize siècle blason de la Grand-Duc de Luxembourg, Henry le sixieme. le design pour cette drapeau et cree dans mille huit cent quarante-cinq. Il y a longtemps! Le pays de Luxembourg officellement adopte ce drapeau sur juin 23 mille neuf cent soixante-douze.
 		</p>
 		<p>
 			Les Sources:
-			<ul>
-				http://www.worldatlas.com/webimage/countrys/europe/lu.htm
-			</ul>
 		</p>
+		<ul>
+			<li>
+				worldflags101.com
+			</li>
+			<li>
+				flagspot.net
+			</li>
+		</ul>
 		</div>
 	</body>
 </html>
