--- a/index.html
+++ b/index.html
@@ -165,16 +165,21 @@
 		<h2>L'histoire du luxembourg</h2>
 		<img src="http://www.everyculture.com/images/ctc_03_img0648.jpg" alt="Luxembourg" style="width:483px;height:287px;" />
 		<p>
-			Bonjour mes amis! Aujourd'hui, je visite un musée et j'apprends beaucoup de l'histoire du luxembourg. Je veut partager ca avec toi!
+			Bonjour mes amis! Aujourd'hui, je visite un musée et j'apprends beaucoup de l'histoire du luxembourg. Je veut partager ca
+			avec toi!
 		</p>
 		<p>
-			Le histoire du luxembourg est tres interessant.
+			Le histoire du luxembourg est tres interessant. Dans 963 A.D, un compte aà qui nom est Siegfried acquis un valée près
+			le River Alzette. Ici est le début du Luxembourg! Mais, Luxembourg est un avant-post jusqu'a 1867, quand il y a dissoudre.
+			Apres le dissoudre de le avant-poste, Luxembourg se transformer en un pays résidential, plutôt que un pays militaire. Apres
+			ça, Luxembourg est lentement adopté le culture de France, Allemagne et Belqique, pare que Luxembourg est entre ces pays.
+			Finalement, Luxembourg creé un nouveau langue, Luxembourgish, et maintenant Luxembourg est un tres belle et brillant pays.
 		</p>
 		<p>
 			Les Sources:
 			<ul>
 				<li>
-
+					lcto.lu
 				</li>
 			</ul>
 		</p>
@@ -186,7 +191,11 @@
 			Bonjour mes amis! Aujourd'hui j'ai ne pas les chauses qui je peut faire, tellement j'apprends du luxembourg sur la Carte de terre.
 		</p>
 		<p>
-			Luxembourg est situé sur le frontiére entre France, Allemagne, et Belqique. Parce que ca, le culture du Luxembourg est un combinaison de ces trois pays, avec le culture du Luxembourg soi-même. Aussi, Luxembourg est un trés petite paus. C'est tres interessant! Le capital du Luxembourg est Luxembourg Ville. Luxembourg Ville est à le sud du Luxembourg. Ce ville est le plus de personnes dans Luxembourg, avec à peu près 100,000. La population est trois fois plus que le deuxieme plus grand ville, Esch-sur-Alzette.
+			Luxembourg est situé sur le frontiére entre France, Allemagne, et Belqique. Parce que ca, le culture du Luxembourg est un
+			combinaison de ces trois pays, avec le culture du Luxembourg soi-même. Aussi, Luxembourg est un trés petite pays.
+			 C'est tres interessant! Le capital du Luxembourg est Luxembourg Ville. Luxembourg Ville est à le sud du Luxembourg.
+			  Ce ville est le plus de personnes dans Luxembourg, avec à peu près 100,000. La population est trois fois plus que
+			  le deuxieme plus grand ville, Esch-sur-Alzette.
 		</p>
 		<p>
 			<hr />
@@ -209,11 +218,14 @@
 		<h2>Le Drapeau du Luxembourg</h2>
 		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Flag_of_Luxembourg.svg/2000px-Flag_of_Luxembourg.svg.png" alt="Le Drapeau du Luxembourg" style="width:666px;height:400px;"  />
 		<p>
-			Bonjour mes amis! Aujourd'hui je ragarde un Drapeau de Luxembourg. C'est tres belle, est je veut donne toi un petit peut de informations!
+			Bonjour mes amis! Aujourd'hui je regarde un Drapeau de Luxembourg. C'est tres belle, est je veut donne toi un petit peut de informations!
 		</p>
 		<p>
-			Les colours de le drapeau est Rouge, Clair Bleu, et Blanc. Ces colours origine par la treize siècle blason de la Grand-Duc de Luxembourg, Henry le sixieme. le design pour cette drapeau et cree dans mille huit cent quarante-cinq. Il y a longtemps! Le pays de Luxembourg officellement adopte ce drapeau sur juin 23 mille neuf cent soixante-douze.
+			Les colours de le drapeau est Rouge, Clair Bleu, et Blanc. Ces colours origine par la treize siècle blason de la Grand-Duc
+			de Luxembourg, Henry le sixieme. le design pour cette drapeau et cree dans mille huit cent quarante-cinq. Il y a longtemps!
+			Le pays de Luxembourg officellement adopte ce drapeau sur juin 23 mille neuf cent soixante-douze.
 		</p>
+		<hr />
 		<p>
 			Les Sources:
 		</p>
@@ -225,6 +237,13 @@
 				flagspot.net
 			</li>
 		</ul>
+		<hr />
+		<!--CONCLUSION-->
+		<h2>Au Revoir Luxembourg!</h2>
+		<p>
+			 Bonjour mes amis! Aujourd'hui est mon finalement jour à Luxembourg. C'est tres triste :( mais maintenant je dois embarquer
+			  sur mon vol. Au revoir Luxembourg!
+		</p>
 		</div>
 	</body>
 </html>
