--- a/index.html
+++ b/index.html
@@ -173,7 +173,10 @@
 			le River Alzette. Ici est le début du Luxembourg! Mais, Luxembourg est un avant-post jusqu'a 1867, quand il y a dissoudre.
 			Apres le dissoudre de le avant-poste, Luxembourg se transformer en un pays résidential, plutôt que un pays militaire. Apres
 			ça, Luxembourg est lentement adopté le culture de France, Allemagne et Belqique, pare que Luxembourg est entre ces pays.
-			Finalement, Luxembourg creé un nouveau langue, Luxembourgish, et maintenant Luxembourg est un tres belle et brillant pays.
+			C'est montré parce que le drapeau de luxembourg est tres similaire à le drapeau de france, mais le Bleu est plus de clair
+			et la orientation de le drapeau est tres different.
+			Finalement, Luxembourg creé un nouveau langue, Luxembourgish, et maintenant Luxembourg est un tres belle et brillant pays,
+			avec le plus haut PIB de TOUT de les pays sur le terre, mais il y a un tres petite pays.
 		</p>
 		<p>
 			Les Sources:
